Fixed so when btn is clicked, color returns to non-hover state, also added a visible border to the btns

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,6 +47,9 @@ body {
   width: 100%;
   height: 100%;
 }
+.btn {
+  border: 1px solid transparent;
+}
 .projects {
   background: #b8a9f2;
   opacity: 0.8;
@@ -120,8 +123,19 @@ a {
   pointer-events: none;
   cursor: default;
 }
+/* These need to be in this specific order */
+.btn:link {
+  color: #2c3e50;
+}
+.btn:visited {
+  color: #2c3e50;
+}
 .btn:hover{
+  color: #ffffff;
   background: #2c3e50 none;
+}
+.btn:active{
+  color: #ffffff;
 }
 .aboutme{
   display: table;
